# orion-backbone

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  PROTOCOL.md  README.md  Vagrantfile  go.mod  go.sum  grpc_build.sh  install.sh  registry.toml
.github/workflows/: codeql.yml  goreleaser-commit.yml  goreleaser-tag.yml  snyk-security.yml
ca/: gen_ssl.sh
dev/mtls/: create_client_key.sh
dev/mtls/ca/: .gitignore  gen_ca.sh  gen_passphrase.sh
dev/mtls/client_key/bf055c510752/: client.crt  client.csr  client.der  (+3 more)
dev/sslhost/: cert.crt  cert.key  gen_ssl.sh
internal/: address_plan.go  frr_templ.go  holepunching_client.go  holepunching_impl.go  impl.go  lockable_tasks.go  nonce_utils.go  registry_client.go  registry_impl.go  session_identifier.go  shared.go  tls.go  utils.go  version.go  wg_interface.go  wireguard_net_link.go
internal/proto/: orion_holepunch.pb.go  orion_holepunch_grpc.pb.go  orion_registry.pb.go  orion_registry_grpc.pb.go  orion_rpc.pb.go  orion_rpc_grpc.pb.go
internal/state/: dispatch.go  edge.go  edge_events.go  event.go  kinds.go  orion_registry.go  registry.go  router.go  router_connect.go  router_disconnect.go  router_events.go
orionv3d/: Cargo.toml
orionv3d/src/: main.rs
packaging/: ca.crt  daemons  frr.conf.tmpl  orion-registry  orion-registry.service  oriond  oriond.service  postinstall.sh  preinstall.sh  sysctl.conf
proto/: orion_holepunch.proto  orion_registry.proto  orion_rpc.proto
protocol/: Cargo.toml
protocol/src/: lib.rs
registry/: Cargo.toml
registry/src/: main.rs  reg_config.rs  wg.rs  ws.rs
