[package]
name = "orionv3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemd = "0.10"
log = "*"

[dependencies.pretty_env_logger]
version = "*"

[dependencies.multi_log]
version = "*"

[dependencies.actix]
version = "*"