[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
defguard_wireguard_rs = "0.4.2"
base64 = "0.21.7"
wireguard-keys = "0.1.1"
anyhow = "1.0.86"
log = "0.4.22"
rand = "*"
webpki = { version = "*", features = ["alloc", "std"] }

[dependencies.warp]
version = "0.3.7"
features = ["tls"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.config]
version = "0.13.4"


[dependencies.futures-util]
version = "*"

[dependencies.pretty_env_logger]
version = "*"

[dependencies.protocol]
path = "../protocol"
